Update and rename index.htm to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>WSD¹Ù·½ÍøÕ¾</title>
+<title>WSDå®˜æ–¹ç½‘ç«™</title>
 </head>
 
 <body>
@@ -13,18 +13,18 @@
 	<tr>
 		<td valign="top" bgcolor="#000000">
 		<!-- MSCellType="DecArea" -->
-		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">WSD¹Ù·½ÍøÕ¾</font></td>
+		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">WSDå®˜æ–¹ç½‘ç«™</font></td>
 		<td valign="top" height="64" bgcolor="#000000">
 		<!-- MSCellType="ContentHead" -->
-		<p align="right"><font color="#FFFFFF" face="Î¢ÈíÑÅºÚ" size="1">v1.0</font></td>
+		<p align="right"><font color="#FFFFFF" face="å¾®è½¯é›…é»‘" size="1">v1.0</font></td>
 	</tr>
 	<tr>
 		<td valign="top" width="349">
 		<!-- MSCellType="NavBody" -->
-		¡¡</td>
+		ã€€</td>
 		<td valign="top" height="328" width="1346">
 		<!-- MSCellType="ContentBody" -->
-		¡¡</td>
+		ã€€</td>
 	</tr>
 </table>
 
