--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 		<!-- MSCellType="NavBody" -->
 		　</td>
 		<td valign="top" height="328" width="1346">
+			<p>未完工</p>
 		<!-- MSCellType="ContentBody" -->
 		　</td>
 	</tr>
-</table>
+< /table>
 
 </body>
 
