--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">WSD官方网站</font></td>
 		<td valign="top" height="64" bgcolor="#000000">
 		<!-- MSCellType="ContentHead" -->
+			<p align="left"><font color="#FFFFFF" face="微软雅黑" size="3">未完工</font></td>
 		<p align="right"><font color="#FFFFFF" face="微软雅黑" size="1">v1.0</font></td>
 	</tr>
 	<tr>
@@ -23,7 +24,6 @@
 		<!-- MSCellType="NavBody" -->
 		　</td>
 		<td valign="top" height="328" width="1346">
-			<p>未完工</p>
 		<!-- MSCellType="ContentBody" -->
 		　</td>
 	</tr>
