--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>WSDå®˜æ–¹ç½‘ç«™</title>
+<title>WSD¹Ù·½ÍøÕ¾</title>
+<script language="JavaScript">
+<!--
+function FP_swapImg() {//v1.0
+ var doc=document,args=arguments,elm,n; doc.$imgSwaps=new Array(); for(n=2; n<args.length;
+ n+=2) { elm=FP_getObjectByID(args[n]); if(elm) { doc.$imgSwaps[doc.$imgSwaps.length]=elm;
+ elm.$src=elm.src; elm.src=args[n+1]; } }
+}
+
+function FP_preloadImgs() {//v1.0
+ var d=document,a=arguments; if(!d.FP_imgs) d.FP_imgs=new Array();
+ for(var i=0; i<a.length; i++) { d.FP_imgs[i]=new Image; d.FP_imgs[i].src=a[i]; }
+}
+
+function FP_getObjectByID(id,o) {//v1.0
+ var c,el,els,f,m,n; if(!o)o=document; if(o.getElementById) el=o.getElementById(id);
+ else if(o.layers) c=o.layers; else if(o.all) el=o.all[id]; if(el) return el;
+ if(o.id==id || o.name==id) return o; if(o.childNodes) c=o.childNodes; if(c)
+ for(n=0; n<c.length; n++) { el=FP_getObjectByID(id,c[n]); if(el) return el; }
+ f=o.forms; if(f) for(n=0; n<f.length; n++) { els=f[n].elements;
+ for(m=0; m<els.length; m++){ el=FP_getObjectByID(id,els[n]); if(el) return el; } }
+ return null;
+}
+// -->
+</script>
 </head>
 
-<body>
+<body onload="FP_preloadImgs(/*url*/'buttonF.jpg', /*url*/'buttonE.jpg')">
 
 
 <table border="0" cellpadding="0" cellspacing="0" width="1695" height="392">
@@ -13,19 +37,20 @@
 	<tr>
 		<td valign="top" bgcolor="#000000">
 		<!-- MSCellType="DecArea" -->
-		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">WSDå®˜æ–¹ç½‘ç«™</font></td>
-		<td valign="top" height="64" bgcolor="#000000">
+		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">WSD¹Ù·½ÍøÕ¾</font></td>
+		<td valign="bottom" height="64" bgcolor="#000000">
 		<!-- MSCellType="ContentHead" -->
-			<p align="left"><font color="#FFFFFF" face="å¾®è½¯é›…é»‘" size="3">æœªå®Œå·¥</font></td>
-		<p align="right"><font color="#FFFFFF" face="å¾®è½¯é›…é»‘" size="1">v1.0</font></td>
+			<p align="center"><a href="videolink.html">
+<img border="0" id="img1" src="buttonD.jpg" height="33" width="100" alt="ÊÓÆµÁ´½Ó" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'buttonE.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'buttonD.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'buttonF.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'buttonE.jpg')" fp-style="fp-btn: Glow Tab 5; fp-font: SimSun-ExtB; fp-orig: 0" fp-title="ÊÓÆµÁ´½Ó"></a></td>
+		<p align="right"><font color="#FFFFFF" face="Î¢ÈíÑÅºÚ" size="1">v1.0</font></td>
 	</tr>
 	<tr>
 		<td valign="top" width="349">
 		<!-- MSCellType="NavBody" -->
-		ã€€</td>
+		¡¡</td>
 		<td valign="top" height="328" width="1346">
 		<!-- MSCellType="ContentBody" -->
-		ã€€</td>
+		¡¡</td>
 	</tr>
 < /table>
 
