--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ANSI">
+<meta charset="UTF-8">
 <title>WSD官方网站</title>
 <script language="JavaScript">
 <!--
