--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>WSDå®˜æ–¹ç½‘ç«™</title>
+<title>WSD¹Ù·½ÍøÕ¾</title>
 </head>
 
 <body>
@@ -13,19 +13,18 @@
 	<tr>
 		<td valign="top" bgcolor="#000000">
 		<!-- MSCellType="DecArea" -->
-		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">WSDå®˜æ–¹ç½‘ç«™</font></td>
+		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">WSD¹Ù·½ÍøÕ¾</font></td>
 		<td valign="top" height="64" bgcolor="#000000">
 		<!-- MSCellType="ContentHead" -->
-	ã€€</tr>
+	¡¡</tr>
 	<tr>
 		<td valign="top" width="349">
 		<!-- MSCellType="NavBody" -->
-		ã€€</td>
+		¡¡</td>
 		<td valign="top" height="328" width="1346">
 		<!-- MSCellType="ContentBody" -->
-		ã€€</td>
+		¡¡</td>
 	</tr>
-< /table>
 
 </body>
 
