--- a/videolink.html
+++ b/videolink.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>WSDå®˜æ–¹ç½‘ç«™ | è§†é¢‘é“¾æŽ¥</title>
+<title>WSD¹Ù·½ÍøÕ¾ | ÊÓÆµÁ´½Ó</title>
 </head>
 
 <body>
@@ -14,19 +14,22 @@
 		<td valign="top" bgcolor="#000000">
 		<!-- MSCellType="DecArea" -->
 		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">
-		<a href="index.html"><font color="#FFFFFF">WSDå®˜æ–¹ç½‘ç«™</font></a></font></td>
+		<a href="index.html"><font color="#FFFFFF">WSD¹Ù·½ÍøÕ¾</font></a></font></td>
 		<td valign="top" height="64" bgcolor="#000000">
 		<!-- MSCellType="ContentHead" -->
-	<font color="#FFFFFF" size="7" face="HarmonyOS Sans SC">è§†é¢‘é“¾æŽ¥</font></tr>
+	<font color="#FFFFFF" size="7" face="HarmonyOS Sans SC">ÊÓÆµÁ´½Ó</font></tr>
 	<tr>
 		<td valign="top" width="349">
 		<!-- MSCellType="NavBody" -->
-		ã€€</td>
+		¡¡</td>
 		<td valign="top" height="328" width="1346">
 		<!-- MSCellType="ContentBody" -->
-		ã€€<p>ã€€</td>
+		¡¡<ol>
+			<li><font face="ºÚÌå"><a href="videolink/1.WSD_KW_JC_01.html">WSD_KW_JC_01</a></font></li>
+			</ol>
+		</td>
 	</tr>
-< /table>
+
 
 </body>
 
