--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>WSDå®˜æ–¹ç½‘ç«™</title>
+<title>WSD¹Ù·½ÍøÕ¾</title>
 <script language="JavaScript">
 <!--
 function FP_swapImg() {//v1.0
@@ -32,27 +32,31 @@ function FP_getObjectByID(id,o) {//v1.0
 <body onload="FP_preloadImgs(/*url*/'buttonF.jpg', /*url*/'buttonE.jpg')">
 
 
-<table border="0" cellpadding="0" cellspacing="0" width="1695" height="392">
+<table border="0" cellpadding="0" cellspacing="0" width="1695">
 	<!-- MSTableType="layout" -->
 	<tr>
 		<td valign="top" bgcolor="#000000">
 		<!-- MSCellType="DecArea" -->
-		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">WSDå®˜æ–¹ç½‘ç«™</font></td>
+		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">WSD¹Ù·½ÍøÕ¾</font></td>
 		<td valign="bottom" height="64" bgcolor="#000000">
 		<!-- MSCellType="ContentHead" -->
 			<p align="center"><a href="videolink.html">
-<img border="0" id="img1" src="buttonD.jpg" height="33" width="100" alt="è§†é¢‘é“¾æŽ¥" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'buttonE.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'buttonD.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'buttonF.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'buttonE.jpg')" fp-style="fp-btn: Glow Tab 5; fp-font: SimSun-ExtB; fp-orig: 0" fp-title="è§†é¢‘é“¾æŽ¥"></a></td>
-		<p align="right"><font color="#FFFFFF" face="å¾®è½¯é›…é»‘" size="1">v1.0</font></td>
+<img border="0" id="img1" src="buttonD.jpg" height="33" width="100" alt="ÊÓÆµÁ´½Ó" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'buttonE.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'buttonD.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'buttonF.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'buttonE.jpg')" fp-style="fp-btn: Glow Tab 5; fp-font: SimSun-ExtB; fp-orig: 0" fp-title="ÊÓÆµÁ´½Ó"></a></td>
+		<p align="right"><font color="#FFFFFF" face="Î¢ÈíÑÅºÚ" size="1">v1.0</font></td>
 	</tr>
 	<tr>
-		<td valign="top" width="349">
+		<td valign="top" width="349" bgcolor="#dddddd">
 		<!-- MSCellType="NavBody" -->
-		ã€€</td>
-		<td valign="top" height="328" width="1346">
+		<font face="HarmonyOS Sans SC"><a href="New_index.html">
+		<font color="#000000">ÐÂÖ÷Ò³£¨²âÊÔ°æ£©</font></a></font></td>
+		<td valign="top"  width="1346">
 		<!-- MSCellType="ContentBody" -->
-		ã€€</td>
+		¡¡<p>¡¡</p>
+		<p>¡¡</p>
+		<p>¡¡</p>
+		<p>¡¡</td>
 	</tr>
-
+< /table>
 
 </body>
 
