--- a/New_index.html
+++ b/New_index.html
@@ -41,13 +41,13 @@
 
 <div id="nav">
 <font face="HarmonyOS Sans SC"><a href="videolink.html"><font color="#000000">
-ÊÓÆµÁ´½Ó</font></a></font></div>
+è§†é¢‘é“¾æŽ¥</font></a></font></div>
 
 <div id="section">
-¡¡</div>
+ã€€</div>
 
 <div id="footer">
-<font face="HarmonyOS Sans SC">WSDµÄÖ÷Ò³</font></div>
+<font face="HarmonyOS Sans SC">WSDçš„ä¸»é¡µ</font></div>
 
 </body>
 </html>
