--- a/videolink/1.WSD_KW_JC_01.html
+++ b/videolink/1.WSD_KW_JC_01.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>WSD¹Ù·½ÍøÕ¾ | ÊÓÆµÁ´½Ó</title>
+<title>WSDå®˜æ–¹ç½‘ç«™ | è§†é¢‘é“¾æ¥</title>
 </head>
 
 <body>
@@ -14,25 +14,25 @@
 		<td valign="top" bgcolor="#000000">
 		<!-- MSCellType="DecArea" -->
 		<font size="7" face="HarmonyOS Sans SC" color="#FFFFFF">
-		<a href="../index.html"><font color="#FFFFFF">WSD¹Ù·½ÍøÕ¾</font></a></font></td>
+		<a href="../index.html"><font color="#FFFFFF">WSDå®˜æ–¹ç½‘ç«™</font></a></font></td>
 		<td valign="top"  bgcolor="#000000">
 		<!-- MSCellType="ContentHead" -->
 	<font color="#FFFFFF" size="7" face="HarmonyOS Sans SC">
-		<a href="../videolink.html"><font color="#FFFFFF">ÊÓÆµÁ´½Ó</font></a></font></tr>
+		<a href="../videolink.html"><font color="#FFFFFF">è§†é¢‘é“¾æ¥</font></a></font></tr>
 	<tr>
 		<td valign="top" width="349">
 		<!-- MSCellType="NavBody" -->
 		<iframe name="I1" src="../sidebar.html" width="339" >
-		ä¯ÀÀÆ÷²»Ö§³ÖÇ¶ÈëÊ½¿ò¼Ü£¬»ò±»ÅäÖÃÎª²»ÏÔÊ¾Ç¶ÈëÊ½¿ò¼Ü¡£</iframe></td>
+		æµè§ˆå™¨ä¸æ”¯æŒåµŒå…¥å¼æ¡†æ¶ï¼Œæˆ–è¢«é…ç½®ä¸ºä¸æ˜¾ç¤ºåµŒå…¥å¼æ¡†æ¶ã€‚</iframe></td>
 		<td valign="top"  width="1346">
 		<!-- MSCellType="ContentBody" -->
-		<font face="ºÚÌå">WSD_KW_JC_01</font><p><font face="ºÚÌå">ĞéÄâ»ú£º</font><a href="https://www.vmware.com/content/vmware/vmware-published-sites/cn/products/workstation-pro/workstation-pro-evaluation.html.html.html">Download 
+		<font face="é»‘ä½“">WSD_KW_JC_01</font><p><font face="é»‘ä½“">è™šæ‹Ÿæœºï¼š</font><a href="https://www.vmware.com/content/vmware/vmware-published-sites/cn/products/workstation-pro/workstation-pro-evaluation.html.html.html">Download 
 		VMware Workstation Pro VMware Workstation Pro is the industry standard 
 		desktop hypervisor for running virtual machines on Linux or Windows PCs. 
 		Discover why. 
 		https://www.vmware.com/content/vmware/vmware-published-sites/cn/products/workstation-pro/workstation-pro-evaluation.html.html.html</a></p>
-		<p>¾µÏñ£º<a href="https://www.123pan.com/s/VDyLVv-GBj9d.html">Windows10.iso¹Ù·½°æÏÂÔØØ­×îĞÂ°æÏÂÔØØ­ÂÌÉ«°æÏÂÔØØ­APPÏÂÔØ-123ÔÆÅÌ 
-		123ÔÆÅÌÎªÄúÌá¹©Windows10.iso×îĞÂ°æÕıÊ½°æ¹Ù·½°æÂÌÉ«°æÏÂÔØ,Windows10.iso°²×¿°æÊÖ»ú°æapkÃâ·ÑÏÂÔØ°²×°µ½ÊÖ»ú,Ö§³ÖµçÄÔ¶ËÒ»¼ü¿ì½İ°²×° 
+		<p>é•œåƒï¼š<a href="https://www.123pan.com/s/VDyLVv-GBj9d.html">Windows10.isoå®˜æ–¹ç‰ˆä¸‹è½½ä¸¨æœ€æ–°ç‰ˆä¸‹è½½ä¸¨ç»¿è‰²ç‰ˆä¸‹è½½ä¸¨APPä¸‹è½½-123äº‘ç›˜ 
+		123äº‘ç›˜ä¸ºæ‚¨æä¾›Windows10.isoæœ€æ–°ç‰ˆæ­£å¼ç‰ˆå®˜æ–¹ç‰ˆç»¿è‰²ç‰ˆä¸‹è½½,Windows10.isoå®‰å“ç‰ˆæ‰‹æœºç‰ˆapkå…è´¹ä¸‹è½½å®‰è£…åˆ°æ‰‹æœº,æ”¯æŒç”µè„‘ç«¯ä¸€é”®å¿«æ·å®‰è£… 
 		https://www.123pan.com/s/VDyLVv-GBj9d.html</a></td>
 	</tr>
 
