--- a/_vti_cnf/demo.html
+++ b/_vti_cnf/demo.html
@@ -1,18 +1,18 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|WASDOO202310\\WASDo
 vti_modifiedby:SR|WASDOO202310\\WASDo
-vti_timelastmodified:TR|02 Jul 2024 09:12:59 -0000
+vti_timelastmodified:TR|02 Jul 2024 10:10:24 -0000
 vti_timecreated:TR|02 Jul 2024 07:14:16 -0000
 vti_title:SR|WSD官方网站
 vti_extenderversion:SR|6.0.2.8161
 vti_backlinkinfo:VX|
 vti_nexttolasttimemodified:TW|02 Jul 2024 07:16:00 -0000
-vti_cacheddtm:TX|02 Jul 2024 09:12:59 -0000
-vti_filesize:IR|685
+vti_cacheddtm:TX|02 Jul 2024 10:10:24 -0000
+vti_filesize:IR|696
 vti_cachedtitle:SR|WSD官方网站
 vti_cachedbodystyle:SR|<body>
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_charset:SR|gb2312
+vti_charset:SR|utf-8
