--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="logo"><a href=".\index.html">WSD</a></div>
         <div class="nav">
             <a href="./videolink.html">视频链接</a>
-            <a href="#">导航</a>
+            <a href="http://www.072211.xyz/index.html">导航</a>
             <a href="#">关于</a>
         </div>
     </div>
