--- a/demo.html
+++ b/demo.html
@@ -82,7 +82,7 @@
         <div class="logo">WSD</div>
         <div class="nav">
             <a href="/videolink.html">视频链接</a>
-            <a href="#">导航</a>
+            <a href="http://www.072211.xyz">导航</a>
             <a href="#">关于</a>
         </div>
     </div>
