--- a/videolink.html
+++ b/videolink.html
@@ -100,7 +100,7 @@
         <div class="logo"><a href=".\index.html">WSD | 视频链接</a></div>
         <div class="nav">
             <a href="/videolink.html" style="background-color: black; color: white;">视频链接</a>
-            <a href="#">导航</a>
+            <a href="http://www.072211.xyz">导航</a>
             <a href="#">关于</a>
         </div>
     </div>
