--- a/index.html
+++ b/index.html
@@ -7,61 +7,11 @@
     <title>WSD官网</title>
     <link rel="stylesheet" href="./sidebar.css">
     <link rel="stylesheet" href="./glass.css">
+    <link rel="stylesheet" href="./css/index.css">
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-        }
-
-        .header {
-            background-color: rgba(255, 255, 255, 0.353);
-            /* 调整透明度 */
-            backdrop-filter: blur(20px);
-            /* 增加模糊程度 */
-            padding: 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            box-sizing: border-box;
-            /* z-index: 1000; */
-        }
-
-
-
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-            text-decoration: none;
-            color: black;
-        }
-
-        .logo a {
-            text-decoration: none;
-            color: black;
-        }
-
-        .nav {
-            display: flex;
-            gap: 20px;
-        }
-
-        .nav a {
-            text-decoration: none;
-            color: black;
-        }
-
-        .main {
-            background-size: cover;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            /* 新增，用于水平居中文本内容 */
         }
     </style>
     <script>
@@ -103,12 +53,8 @@
     </div>
 
     <div class="main">
-
-
-    </div>
-    <div id="main">
-
-
+        <div style="top: 0;left: 0;width: 100%;height: 90vh"></div>
+        <div class="container" style="position: relative;width: 100%;height: 100%;"></div>
     </div>
 
 
